--- a/.github/workflows/ccdl.yaml
+++ b/.github/workflows/ccdl.yaml
@@ -21,6 +21,8 @@ on:
         default: '[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]'
         required: true
 
+run-name: CC-NEWS (${{ inputs.years }} x ${{ inputs.months }})
+
 jobs:
 
   ccdl:
