--- a/.github/workflows/ccdl.yaml
+++ b/.github/workflows/ccdl.yaml
@@ -21,7 +21,7 @@ on:
         default: '[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]'
         required: true
 
-run-name: CC-NEWS (${{ inputs.years }} x ${{ inputs.months }})
+run-name: CC-NEWS ${{ inputs.years }} x ${{ inputs.months }}
 
 jobs:
 
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-    name: CC-NEWS (${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }})
+    name: CC-NEWS ${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
     - name: Install prerequisites
       run: |
         sh tools/setup-tools.sh
-    - name: Process CC-NEWS (${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }})
+    - name: Process CC-NEWS ${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }}
       run: |
         # echo ${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }} > ccnews-${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }}.sqlite
         tools/miniconda/bin/python tools/ccdl.py --url-filter=@srcdata/url-filter.txt --lang-filter=en --cats-filter=economy --term-filter=@srcdata/sp500-filter.txt --warc-date-range=${{ matrix.year }}-${{ matrix.month }}-1,${{ matrix.year }}-${{ matrix.month }}-1 --warc-cohort=${{ matrix.cohort }},${{ inputs.cohort_count }} ccnews-${{ matrix.year }}-${{ matrix.month }}-C${{ matrix.cohort }}.sqlite
