github: workflows: daily: rename temp sentiment dir

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -77,7 +77,7 @@ jobs:
     - name: Merge partial databases
       run: |
         tools/mergedb.py --table=ccindex,files ccnews-*.sqlite ccnews.sqlite
-        tools/cc2csv.py ccnews.sqlite data
+        tools/cc2csv.py ccnews.sqlite daily
     - name: Upload merged database
       uses: actions/upload-artifact@v3
       with:
@@ -87,4 +87,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: daily+${{ env.DATE_RANGE }}
-        path: data/
+        path: daily/
