--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         cohort: ${{ fromJSON(inputs.cohorts || '[0, 1, 2, 3, 4]') }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       GITHUB_TOKEN: ${{ secrets.GH_PAT }}
     outputs:
@@ -66,7 +66,7 @@ jobs:
   release:
     needs: ccdl
     if: always()
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       DATE_RANGE: ${{ needs.ccdl.outputs.DATE_RANGE }}
     steps:
@@ -102,7 +102,7 @@ jobs:
     if: always()
     permissions:
       actions: write
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
