--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -58,9 +58,9 @@ jobs:
         fi
         tools/ccdl.py --url-filter=@srcdata/url-filter.txt --lang-filter=en --cats-filter=economy --term-filter=@srcdata/sp500-filter.txt --date-range="$date_range" --warc-date-range="$date_range" --warc-cohort=${{ matrix.cohort }},${{ inputs.cohort_count || '5' }} ccnews-${{ inputs.date_range || 'yesterday' }}-C${{ matrix.cohort }}.sqlite
     - name: Upload partial database
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: partial
+        name: partial-${{ inputs.date_range || 'yesterday' }}-C${{ matrix.cohort }}
         path: ccnews-${{ inputs.date_range || 'yesterday' }}-C${{ matrix.cohort }}.sqlite
 
   release:
@@ -79,20 +79,21 @@ jobs:
       run: |
         pip install -r tools/requirements.txt
     - name: Download partial databases
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
-        name: partial
+        pattern: partial-*
+        merge-multiple: true
     - name: Merge partial databases
       run: |
         tools/mergedb.py --table=ccindex,files ccnews-*.sqlite ccnews.sqlite
         tools/cc2csv.py ccnews.sqlite daily
     - name: Upload merged database
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: merged
         path: ccnews.sqlite
     - name: Upload sentiment data
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: daily+${{ env.DATE_RANGE }}
         path: daily/
